--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="19" />
     
     <permission android:name="com.android.vending.CHECK_LICENSE"></permission>
@@ -17,7 +17,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="net.peterme.contare.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+			android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
