--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -5,10 +5,10 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="17"
         android:targetSdkVersion="19" />
     
-    <permission android:name="com.android.vending.CHECK_LICENSE"></permission>
+    <uses-permission android:name="com.android.vending.CHECK_LICENSE" />
 
     <application
         android:allowBackup="true"
