--- a/project.properties
+++ b/project.properties
@@ -12,3 +12,4 @@
 
 # Project target.
 target=Google Inc.:Google APIs:18
+android.library.reference.1=../../../../media/peter/AA4ADDB84ADD818D/AndroidSDK/android-sdk-linux/extras/google/play_licensing/library
